GIA-16 move repited info to util class